# importsorcery

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
importsorcery/: __main__.py  imports.py  index.py  main.py  utils.py
test/: test_index.py  test_stuff.py  test_utils.py
testing/: fixtures.py
