[metadata]
name = importsorcery
version = 0.1
description = A utility that suggest imports.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/milochadam/importsorcery
author = Adam Miloch
author_email = miloch.adam@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
python_requires = >=3.7.0

[options.entry_points]
console_scripts =
    importsorcery = importsorcery.main:main
